# life

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .gitmodules  .mcp.json  .railwayignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  METALAYER.md  Makefile  Makefile.control  NAVIGATION.md  PLAN.md  PLANS.md  PLATFORM.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TESTING.md  WORKFLOW.md  arcan.md  cliff.toml  deny.toml  env.example  install.sh  live.code-workspace  llms.txt  mlflow.db  release-plz.toml  (+2 more)
.cargo/: audit.toml  config.toml
.claude/: settings.json
.codex/: README.md  best-practices.md  commands.md  context.md  rules.md
.control/: commands.yaml  plant.yaml  policy.yaml  runtime.yaml  state.json  topology.yaml
.githooks/: commit-msg  post-commit  pre-commit  pre-push  pre-push.pre-entire  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.well-known/: agent.json
aiOS/: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml
aiOS/apps/aios-api/: Cargo.toml  README.md
aiOS/apps/aios-api/src/: main.rs  openapi.rs
aiOS/apps/aiosd/: Cargo.toml  README.md
anima/: CLAUDE.md  Cargo.toml  README.md
anima/.github/workflows/: ci.yml  release.yml
anima/crates/anima-core/: Cargo.toml
anima/crates/anima-core/src/: agent_self.rs  error.rs  lib.rs  soul.rs
anima/crates/anima-identity/src/: keystore.rs  lib.rs  seed.rs
anima/crates/anima-lago/: Cargo.toml
anima/crates/anima-lago/src/: genesis.rs  projection.rs
autonomic/: .gitignore  Makefile.control  Makefile.harness
conformance/: README.md  run.sh
control/: CONTROL_LOOP.md  OBSERVABILITY.md
crates/aios-protocol/: Cargo.toml
crates/aios-protocol/src/: event.rs  lib.rs  policy.rs  ports.rs
crates/aios-tools/: Cargo.toml
crates/aios/aios-events/: Cargo.toml
crates/aios/aios-kernel/: CHANGELOG.md  Cargo.toml
crates/aios/aios-kernel/src/: lib.rs
crates/aios/aios-policy/: Cargo.toml  README.md
crates/aios/aios-policy/src/: lib.rs
crates/aios/aios-runtime/: Cargo.toml  README.md
crates/aios/aios-runtime/src/: lib.rs
crates/aios/aios-sandbox/: Cargo.toml  README.md
crates/aios/aios-sandbox/src/: lib.rs
crates/aios/life-aios/: Cargo.toml
crates/aios/life-aios/src/: lib.rs
crates/autonomic-controller/: Cargo.toml
crates/autonomic-controller/src/: lib.rs  projection.rs  strategy_rules.rs  trust_scoring.rs
crates/autonomic-core/: Cargo.toml
crates/autonomic-core/src/: gating.rs  hysteresis.rs  lib.rs  trust.rs
crates/haima-api/: Cargo.toml
crates/haima-api/src/: auth.rs  insurance.rs  lib.rs  outcome.rs  routes.rs
crates/haima-insurance/: Cargo.toml
crates/haima-insurance/src/: claims.rs  marketplace.rs  pool.rs  risk.rs
crates/haima-outcome/: Cargo.toml
crates/haima-outcome/src/: engine.rs  sla.rs  verifier.rs
crates/lago-api/: Cargo.toml
crates/lago-api/src/: error.rs  lib.rs  middleware.rs  router.rs  state.rs
crates/lago-api/src/routes/: blobs.rs  branches.rs  events.rs  files.rs  health.rs  mod.rs  sessions.rs
crates/lago-api/src/sse/: anthropic.rs  format.rs  lago.rs  openai.rs  vercel.rs
crates/lago-api/tests/: e2e_branch_merge.rs  e2e_files.rs  e2e_sessions.rs
crates/lago-cli/: Cargo.toml
crates/lago-cli/src/: db.rs  main.rs
crates/lago-cli/src/commands/: branch.rs  init.rs  log.rs  mod.rs  restore.rs  serve.rs  session.rs
crates/lago-core/: Cargo.toml
crates/lago-core/src/: cognitive.rs  error.rs  event.rs  id.rs  journal.rs  lib.rs  mount.rs  policy.rs  protocol_bridge.rs  tool_span.rs
crates/lago-ingest/: Cargo.toml  build.rs
crates/lago-ingest/src/: client.rs  codec.rs  server.rs
crates/lago-journal/: Cargo.toml
crates/lago-journal/src/: lib.rs  redb_journal.rs  snapshot.rs  stream.rs
crates/lago-journal/tests/: golden_replay.rs
crates/lago-store/: Cargo.toml
crates/lago-store/src/: blob.rs  compress.rs  encrypt.rs  hash.rs
crates/lagod/: Cargo.toml
crates/lagod/src/: config.rs  lib.rs  main.rs  shutdown.rs
crates/life/: Cargo.toml
crates/life-paths/: Cargo.toml
crates/life-paths/src/: credentials.rs  discovery.rs  env.rs  keychain.rs  lib.rs
crates/life/src/: lib.rs  main.rs
docker/: arcan.Dockerfile  autonomicd.Dockerfile  haimad.Dockerfile  lagod.Dockerfile
docs/: AGENTX_HACKATHON.md  ARCHITECTURE.md  COGNITIVE_STORAGE.md  COGNITIVE_STORAGE_v2.md  CONTRACT.md  FEATURE_CONWAY_ACTUATION.md  FILESYSTEM_PRINCIPLE.md  LAGO_ARCHITECTURE.md  LAKEHOUSE_ARCHITECTURE.md  MEMORY_GRAPH_ARCHITECTURE.md  MEMORY_SYSTEM.md  METALAYER.md  MODULE_GUIDE.md  NAVIGATION.md  OBSERVABILITY.md  PLAN.md  PLANS.md  PLATFORM.md  QUICKSTART.md  README.md  RELAY.md  RESEARCH_AGENT_FRAMEWORKS_2026Q2.md  ROADMAP.md  STATUS.md  TESTING.md  arcan.md
evals/: control-metrics.yaml
examples/: README.md
haima/: Cargo.toml
interface/: CLAUDE.md  package.json  tsconfig.json
lago/: .gitignore  default-policy.toml  lago.toml  publish.sh
life-cli/: Cargo.toml
raw-dumps/: lago-lakehouse-memory.md
relay/: CLAUDE.md  Cargo.toml
relay/crates/life-relay-api/: Cargo.toml
relay/crates/life-relay-api/src/: lib.rs
relay/crates/life-relay-core/: Cargo.toml
relay/crates/life-relay-core/src/: lib.rs  protocol.rs
relay/crates/life-relayd/: Cargo.toml
relay/crates/life-relayd/src/: auth.rs  config.rs  connection.rs  daemon.rs  lib.rs  main.rs
relay/crates/life-relayd/src/adapters/: claude.rs  mod.rs  parser.rs  pty.rs
scripts/: arcan-skills-add.sh  audit_control.sh  conversation-history.py  e2e-arcan.sh  sync-rcs-parameters.sh
sdks/: CLAUDE.md  (+1 more)
sdks/haima-py/: README.md  pyproject.toml
sdks/haima-py/examples/: crewai_agent.py  langchain_agent.py  x402_middleware.py
sdks/haima-py/src/haima/: __init__.py  client.py  types.py  wallet.py  x402.py
sdks/haima-py/src/haima/integrations/: __init__.py  crewai.py  langchain.py
sdks/haima-py/tests/: test_client.py  test_types.py  test_wallet.py  test_x402.py
spaces-a2a/: Cargo.toml  build.rs
spaces-a2a/src/: grpc.rs  lib.rs
(+1563 files in other folders)
