[workspace]
resolver = "2"
members = [
    "crates/anima-core",
    "crates/anima-identity",
    "crates/anima-lago",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Broomva Tech <contact@broomva.tech>"]
repository = "https://github.com/broomva/anima"
homepage = "https://docs.broomva.tech/docs/life/anima"
description = "Agent identity, beliefs, and self-model for the Life Agent OS"
keywords = ["agent", "identity", "did", "ai", "trust"]
categories = ["authentication", "cryptography"]

[workspace.dependencies]
# Internal
anima-core = { path = "crates/anima-core", version = "0.1.0" }
anima-identity = { path = "crates/anima-identity", version = "0.1.0" }
anima-lago = { path = "crates/anima-lago", version = "0.1.0" }

# Canonical contract
aios-protocol = { path = "../aiOS/crates/aios-protocol", version = "0.2.0" }

# Persistence
lago-core = { path = "../lago/crates/lago-core", version = "0.2.1" }
lago-journal = { path = "../lago/crates/lago-journal", version = "0.2.1" }

# Haima wallet (secp256k1 identity)
haima-core = { path = "../haima/crates/haima-core", version = "0.1.0" }
haima-wallet = { path = "../haima/crates/haima-wallet", version = "0.1.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
blake3 = "1"

# JWT
jsonwebtoken = "9"
base64 = "0.22"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bs58 = "0.5"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
