[workspace]
resolver = "2"
members = [
    "crates/life-relay-core",
    "crates/life-relay-api",
    "crates/life-relayd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Broomva Tech <contact@broomva.tech>"]
repository = "https://github.com/broomva/life-relay"
homepage = "https://broomva.tech"
keywords = ["agent", "relay", "remote-sessions", "ai"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
unnested_or_patterns = "warn"
trivially_copy_pass_by_ref = "warn"
implicit_clone = "warn"
manual_let_else = "warn"
large_enum_variant = "warn"
doc_markdown = "warn"
semicolon_if_nothing_returned = "warn"
match_wildcard_for_single_variants = "warn"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "process", "io-util", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# HTTP
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"

# PTY
portable-pty = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.9"
anyhow = "1"
dirs = "6"
hostname = "0.4"
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
life-relay-core = { version = "0.1.0", path = "crates/life-relay-core" }
life-relay-api = { version = "0.1.0", path = "crates/life-relay-api" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
