[package]
name = "spaces-a2a"
version = "0.1.0"
edition = "2021"
description = "A2A protocol bridge for Life Spaces — exposes Life agents as A2A-compatible services"
license = "MIT OR Apache-2.0"

[[bin]]
name = "spaces-a2a"
path = "src/main.rs"

[dependencies]
# Web server
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio-stream = "0.1"

# Crypto (Agent Card signing)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
