[package]
name = "aios-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canonical Agent OS protocol — shared types, event taxonomy, and trait interfaces for all projects (Arcan, Lago, Autonomic)"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
