[package]
name = "aios-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tool registry and governance for Agent OS"

[dependencies]
aios-protocol = { path = "../aios-protocol", version = "0.2.0" }
aios-policy = { path = "../aios-policy", version = "0.2.0" }
aios-sandbox = { path = "../aios-sandbox", version = "0.2.0" }
anyhow.workspace = true
async-trait.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
