[package]
name = "autonomic-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure rule engine and projection reducer for the Autonomic homeostasis controller"

[dependencies]
autonomic-core.workspace = true
aios-protocol.workspace = true
anima-core.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
