[package]
name = "autonomic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types, traits, and errors for the Autonomic homeostasis controller"

[dependencies]
aios-protocol.workspace = true
anima-core.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
