[package]
name = "lago-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lago-core.workspace = true
lago-journal.workspace = true
lago-store.workspace = true
lago-fs.workspace = true
lago-policy.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
ulid.workspace = true
