[package]
name = "lago"
edition.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[[bin]]
name = "lago"
path = "src/main.rs"

[dependencies]
lago-core.workspace = true
lago-journal.workspace = true
lago-store.workspace = true
lago-fs.workspace = true
lago-ingest.workspace = true
lago-api.workspace = true
lago-policy.workspace = true
lagod = { path = "../lagod" }
clap.workspace = true
tokio.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
