[package]
name = "lago-core"
description = "Foundation types, traits, and error definitions for the Lago agent runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
aios-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
