[package]
name = "lago-ingest"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lago-core.workspace = true
lago-journal.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
