[package]
name = "lago-ingest"
description = "gRPC bidirectional streaming ingest service for the Lago agent runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "LICENSE"]

[dependencies]
lago-core.workspace = true
lago-journal.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
