[package]
name = "lago-journal"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lago-core.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
