[package]
name = "lago-store"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lago-core.workspace = true
sha2.workspace = true
zstd.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
