[package]
name = "lagod"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "lagod"
path = "src/main.rs"

[dependencies]
lago-core.workspace = true
lago-journal.workspace = true
lago-store.workspace = true
lago-fs.workspace = true
lago-ingest.workspace = true
lago-api.workspace = true
lago-policy.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
axum.workspace = true
toml.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
