[package]
name = "life"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Life Agent OS — unified facade re-exporting all subsystem crates (aios, arcan, lago, praxis, autonomic, haima, nous, anima, relay, vigil)"

[dependencies]
life-aios = { path = "../aios/life-aios", version = "0.3.0" }
life-arcan = { path = "../arcan/life-arcan", version = "0.3.0" }
life-lago = { path = "../lago/life-lago", version = "0.3.0" }
life-praxis = { path = "../praxis/life-praxis", version = "0.3.0" }
life-autonomic = { path = "../autonomic/life-autonomic", version = "0.3.0" }
life-haima = { path = "../haima/life-haima", version = "0.3.0" }
life-nous = { path = "../nous/life-nous", version = "0.3.0" }
life-anima = { path = "../anima/life-anima", version = "0.3.0" }
life-relay = { path = "../relay/life-relay", version = "0.3.0" }
life-vigil = { path = "../vigil/life-vigil", version = "0.3.0" }
# life-spaces excluded: requires spacetime generate to update bindings
# life-spaces = { path = "../spaces/life-spaces", version = "0.1.0" }

[lints]
workspace = true
