[package]
name = "life-os"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Life Agent OS — install with `cargo install life-os` for the `life` CLI and all subsystem libraries"

[[bin]]
name = "life"
path = "src/main.rs"

[dependencies]
# CLI (provides the life binary logic)
life-cli = { path = "../cli/life-cli", version = "0.3.0" }
tokio = { workspace = true }
anyhow.workspace = true

# Subsystem facades
life-aios = { path = "../aios/life-aios", version = "0.3.0" }
life-arcan = { path = "../arcan/life-arcan", version = "0.3.0" }
life-lago = { path = "../lago/life-lago", version = "0.3.0" }
life-praxis = { path = "../praxis/life-praxis", version = "0.3.0" }
life-autonomic = { path = "../autonomic/life-autonomic", version = "0.3.0" }
life-haima = { path = "../haima/life-haima", version = "0.3.0" }
life-nous = { path = "../nous/life-nous", version = "0.3.0" }
life-anima = { path = "../anima/life-anima", version = "0.3.0" }
life-relay = { path = "../relay/life-relay", version = "0.3.0" }
life-vigil = { path = "../vigil/life-vigil", version = "0.3.0" }
# life-spaces excluded: requires spacetime generate to update bindings
# life-spaces = { path = "../spaces/life-spaces", version = "0.1.0" }

[lints]
workspace = true
