[package]
name = "aios-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP/SSE API server for the Agent OS kernel"

[dependencies]
aios-kernel = { path = "../../crates/aios-kernel", version = "0.2.0" }
aios-protocol = { path = "../../crates/aios-protocol", version = "0.2.0" }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
