[package]
name = "aiosd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Agent OS daemon — standalone binary for running the aiOS kernel"

[dependencies]
aios-kernel = { path = "../../crates/aios-kernel", version = "0.2.0" }
aios-protocol = { path = "../../crates/aios-protocol", version = "0.2.0" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
