[package]
name = "anima-lago"
description = "Lago persistence bridge for Anima — soul genesis, belief projection, self reconstruction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anima-core.workspace = true
aios-protocol.workspace = true
lago-core.workspace = true
lago-journal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
blake3.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
